# vala

./: Makefile.am  configure.ac
shotodolplug/: Makefile.am  README.md  compositeextension.vala  plugin.vala
